# node2vec-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: batch.rs  dataset.rs  graph.rs  lib.rs  main.rs  model.rs  reader.rs  train.rs
tests/: integration_tests.rs
tests/data/: karate.csv  test_graph.csv
