[package]
name = "node2vec-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.19", features = ["dataset", "train", "ndarray", "tch"] }
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
indicatif = "0.18.3"
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"
