[package]
name = "node2vec-rs"
version = "0.1.0"
edition = "2021"
authors = ["Gregor Lueg <gregorlueg@me.com>"]

[dependencies]
burn = { version = "0.19.1", features = ["dataset", "train"] }
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
indicatif = "0.18.3"
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"
tempfile = "3.23.0"

[features]
default = ["tch-cpu"]
ndarray = ["burn/ndarray"]
ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
tch-cpu = ["burn/tch"]
wgpu = ["burn/wgpu"]
metal = ["burn/metal"]
vulkan = ["burn/vulkan"]
